--- a/WpfApplication1/WpfApplication1/SearchStudent.xaml
+++ b/WpfApplication1/WpfApplication1/SearchStudent.xaml
@@ -5,7 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"    
       mc:Ignorable="d"             
       FocusManager.FocusedElement="{Binding ElementName=cmbStudent}"
-      Title="Search Student" Focusable="True" Style="{StaticResource SSIDPage}" Loaded="Page_Loaded">
+      Title="Search Student" Focusable="True" Style="{StaticResource SSIDPage}" Loaded="Page_Loaded" Unloaded="Page_Unloaded">
 
     <DockPanel LastChildFill="True">
 
