--- a/WpfApplication1/WpfApplication1/StudentSignin.xaml
+++ b/WpfApplication1/WpfApplication1/StudentSignin.xaml
@@ -52,17 +52,18 @@
                 <TextBlock HorizontalAlignment="Center" Margin="0 10 0 0" Style="{StaticResource MaterialDesignDisplay1TextBlock}" TextWrapping="Wrap" FontSize="20" Text="Sample barcode on Student ID"></TextBlock>
             </StackPanel>
 
-            <StackPanel Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,20,0,0">
-                <TextBlock Style="{StaticResource MaterialDesignDisplay1TextBlock}" TextWrapping="Wrap" HorizontalAlignment="Left" FontSize="36" Margin="0,0,0,10" Text="Scan Student ID to Sign-in"></TextBlock>
+            <StackPanel Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,13,0,0">
+                <TextBlock Style="{StaticResource MaterialDesignDisplay1TextBlock}" TextWrapping="Wrap" HorizontalAlignment="Left" FontSize="36" Margin="0,0,0,0" Text="Scan Student ID to Sign-in"></TextBlock>
 
-                <StackPanel>
+                <TextBox InputMethod.IsInputMethodEnabled="False" Focusable="True" Name="txtBarcodeData" Opacity="0" Width="0" Height="0" Text="" TextChanged="txtBarcodeData_TextChanged" />
+
+                <StackPanel Name="formWrapper" Visibility="Collapsed" Margin="0 20 0 0">
                     <wpfx1:WatermarkTextBox InputScope="PersonalFullName" Style="{StaticResource WmTextField}" Name="txt_FirstName" Watermark="First Name" IsEnabled="False" />
                     <wpfx1:WatermarkTextBox InputScope="PersonalFullName" Style="{StaticResource WmTextField}" Name="txt_LastName" Watermark="Last Name" IsEnabled="False" />
                     <wpfx1:WatermarkTextBox InputScope="PersonalFullName" Style="{StaticResource WmTextField}" Name="txt_Grade" Watermark="Grade" IsEnabled="False" />
-                    <TextBox InputMethod.IsInputMethodEnabled="False" Focusable="True" Name="txtBarcodeData" Opacity="0" Width="0" Height="0" Text="" TextChanged="txtBarcodeData_TextChanged" />
-                    <Button Name="btnConfirm" IsEnabled="False" Style="{StaticResource MyButton}" Content="CONFIRM AND SUBMIT" Width="650" Margin="0 10 0 20" Click="Button_Click"/>
-                    <TextBlock Width="650" TextBlock.LineHeight="36" FontSize="24" Style="{StaticResource MaterialDesignDisplay1TextBlock}" TextWrapping="Wrap" Text="Hold your Student ID up to the scanning device as shown. The Front of your card should face the scanning device so that it can read the bar code. Once you hear the beep, your ID has been scanned properly. Press Submit to continue."></TextBlock>
+                    <Button Name="btnConfirm" IsEnabled="False" Style="{StaticResource MyButton}" Content="CONFIRM AND SUBMIT" Width="650" Margin="0 10 0 0" Click="Button_Click"/>
                 </StackPanel>
+                <TextBlock Margin="0 20 0 0" Width="650" TextBlock.LineHeight="36" FontSize="24" Style="{StaticResource MaterialDesignDisplay1TextBlock}" TextWrapping="Wrap" Text="Hold your Student ID up to the scanning device as shown. The Front of your card should face the scanning device so that it can read the bar code. Once you hear the beep, your ID has been scanned properly. Press Submit to continue."></TextBlock>
 
             </StackPanel>
         </Grid>
