--- a/WpfApplication1/WpfApplication1/VisitorSignout.xaml
+++ b/WpfApplication1/WpfApplication1/VisitorSignout.xaml
@@ -52,16 +52,18 @@
                 <TextBlock HorizontalAlignment="Center" Margin="0 10 0 0" Style="{StaticResource MaterialDesignDisplay1TextBlock}" TextWrapping="Wrap" FontSize="20" Text="Sample barcode on Visitor ID"></TextBlock>
             </StackPanel>
 
-            <StackPanel Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,20,0,0">
+            <StackPanel Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,23,0,0">
                 <TextBlock Style="{StaticResource MaterialDesignDisplay1TextBlock}" TextWrapping="Wrap" HorizontalAlignment="Left" FontSize="36" Margin="0,0,0,10" Text="Scan Visitor or Student ID to Sign-out"></TextBlock>
 
-                <StackPanel>
+                <TextBox InputMethod.IsInputMethodEnabled="False" Focusable="True" Name="txtBarcodeData" Opacity="0" Width="0" Height="0" Text="" TextChanged="txtBarcodeData_TextChanged" />
+
+                <StackPanel Name="formWrapper" Visibility="Collapsed"> 
                     <wpfx1:WatermarkTextBox Style="{StaticResource WmTextField}" Name="txt_FirstName" Watermark="First Name" IsEnabled="False" />
                     <wpfx1:WatermarkTextBox Style="{StaticResource WmTextField}" Name="txt_LastName" Watermark="Last Name" IsEnabled="False" />
-                    <TextBox InputMethod.IsInputMethodEnabled="False" Focusable="True" Name="txtBarcodeData" Opacity="0" Width="0" Height="0" Text="" TextChanged="txtBarcodeData_TextChanged" />
                     <Button Name="btnConfirm" IsEnabled="False" Style="{StaticResource MyButton}" Content="CONFIRM AND SUBMIT" Width="650" Margin="0 20 0 40" Click="Button_Click"/>
-                    <TextBlock Width="650" TextBlock.LineHeight="36" FontSize="24" Style="{StaticResource MaterialDesignDisplay1TextBlock}" TextWrapping="Wrap" Text="To sign out, please hold the visitor ID up to the scanning device with the barcode facing the device. Once you hear the beep, your visitor ID has been scanned properly. Press Submit to continue."></TextBlock>
                 </StackPanel>
+
+                <TextBlock Width="650" TextBlock.LineHeight="36" FontSize="24" Style="{StaticResource MaterialDesignDisplay1TextBlock}" TextWrapping="Wrap" Text="To sign out, please hold the visitor ID up to the scanning device with the barcode facing the device. Once you hear the beep, your visitor ID has been scanned properly. Press Submit to continue."></TextBlock>
 
             </StackPanel>
         </Grid>
