--- a/WpfApplication1/WpfApplication1/CheckinReasons.xaml
+++ b/WpfApplication1/WpfApplication1/CheckinReasons.xaml
@@ -37,17 +37,17 @@
             <TextBlock Grid.Column="0" Grid.Row="0" TextAlignment="Center" Style="{StaticResource MaterialDesignDisplay1TextBlock}"><Run Text="ID Scan Successful."/><LineBreak/><Run Text="Which option best describes you?"/></TextBlock>
 
             <WrapPanel Grid.Column="1" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center">
-                <Button Height="100" Name="btnOption1" Style="{StaticResource MarginButtonStyle}" Content="Sign-in Option 1" Tag="1" Click="btnOptionClick" />
-                <Button Height="100" Name="btnOption2" Style="{StaticResource MarginButtonStyle}" Content="Sign-in Option 2" Tag="2" Click="btnOptionClick" />
-                <Button Height="100" Name="btnOption3" Style="{StaticResource MarginButtonStyle}" Content="Sign-in Option 3" Tag="3" Click="btnOptionClick" />
+                <Button Height="100" IsEnabled="False" Visibility="Hidden" Name="btnOption1" Style="{StaticResource MarginButtonStyle}" Content="Sign-in Option 1" Tag="1" Click="btnOptionClick" />
+                <Button Height="100" IsEnabled="False" Visibility="Hidden" Name="btnOption2" Style="{StaticResource MarginButtonStyle}" Content="Sign-in Option 2" Tag="2" Click="btnOptionClick" />
+                <Button Height="100" IsEnabled="False" Visibility="Hidden" Name="btnOption3" Style="{StaticResource MarginButtonStyle}" Content="Sign-in Option 3" Tag="3" Click="btnOptionClick" />
 
-                <Button Height="100" Name="btnOption4" Style="{StaticResource MarginButtonStyle}" Content="Sign-in Option 4" Tag="4" Click="btnOptionClick" />
-                <Button Height="100" Name="btnOption5" Style="{StaticResource MarginButtonStyle}" Content="Sign-in Option 5" Tag="5" Click="btnOptionClick" />
-                <Button Height="100" Name="btnOption6" Style="{StaticResource MarginButtonStyle}" Content="Sign-in Option 6" Tag="6" Click="btnOptionClick" />
+                <Button Height="100" IsEnabled="False" Visibility="Hidden" Name="btnOption4" Style="{StaticResource MarginButtonStyle}" Content="Sign-in Option 4" Tag="4" Click="btnOptionClick" />
+                <Button Height="100" IsEnabled="False" Visibility="Hidden" Name="btnOption5" Style="{StaticResource MarginButtonStyle}" Content="Sign-in Option 5" Tag="5" Click="btnOptionClick" />
+                <Button Height="100" IsEnabled="False" Visibility="Hidden" Name="btnOption6" Style="{StaticResource MarginButtonStyle}" Content="Sign-in Option 6" Tag="6" Click="btnOptionClick" />
 
-                <Button Height="100" Name="btnOption7" Style="{StaticResource MarginButtonStyle}" Content="Sign-in Option 7" Tag="7" Click="btnOptionClick" />
-                <Button Height="100" Name="btnOption8" Style="{StaticResource MarginButtonStyle}" Content="Sign-in Option 8" Tag="8" Click="btnOptionClick" />
-                <Button Height="100" Name="btnOption9" Style="{StaticResource MarginButtonStyle}" Content="Sign-in Option 9" Tag="9" Click="btnOptionClick" />
+                <Button Height="100" IsEnabled="False" Visibility="Hidden" Name="btnOption7" Style="{StaticResource MarginButtonStyle}" Content="Sign-in Option 7" Tag="7" Click="btnOptionClick" />
+                <Button Height="100" IsEnabled="False" Visibility="Hidden" Name="btnOption8" Style="{StaticResource MarginButtonStyle}" Content="Sign-in Option 8" Tag="8" Click="btnOptionClick" />
+                <Button Height="100" IsEnabled="False" Visibility="Hidden" Name="btnOption9" Style="{StaticResource MarginButtonStyle}" Content="Sign-in Option 9" Tag="9" Click="btnOptionClick" />
             </WrapPanel>
         </Grid>
 
