--- a/WpfApplication1/WpfApplication1/TakePhoto.xaml
+++ b/WpfApplication1/WpfApplication1/TakePhoto.xaml
@@ -5,7 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:SchoolSafeID"
       mc:Ignorable="d"       
-      Title="Take Photo" Loaded="page_Loaded" Unloaded="Page_Unloaded" Style="{StaticResource SSIDPage}">
+      Title="Take Photo" Unloaded="Page_Unloaded" Style="{StaticResource SSIDPage}">
 
     <DockPanel LastChildFill="True">
 
@@ -28,9 +28,15 @@
         <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Width="800">
             <TextBlock Style="{StaticResource MaterialDesignDisplay1TextBlock}" TextWrapping="Wrap" HorizontalAlignment="Center" FontSize="36" Margin="0,0,0,0" Text="Take Photo"></TextBlock>
             <TextBlock HorizontalAlignment="Center" Text="Align your face in the square and press the &quot;Take Photo&quot; button." FontSize="28" Margin="0,10,0,20" />
-            <Grid>
-                <Image x:Name="imgCapture" Stretch="None" Width="415" Height="355"/>
-            </Grid>
+
+            <StackPanel>
+                <Canvas Width="640" Height="360">
+                    <Canvas.Background>
+                        <ImageBrush x:Name="imgCapture" Stretch="UniformToFill"/>
+                    </Canvas.Background>
+                </Canvas>
+            </StackPanel>
+            
             <Button x:Name="btnTakePhoto" Content="Take Photo" Style="{StaticResource MyButton}" Click="btnTakePhoto_Click" Margin="0,30,0,0"/>
         </StackPanel>
 
